@@ -123,6 +123,7 @@ class Cleaner():
                     "&raquo;",
                     "&#8220;",
                     "&#8221;",
+                    "&#8222;",
                     "&#171;",
                     "&#187;",
                     "&quot;",
